@startuml
hide empty description
!include ../../../../resources/doc/plantuml/clean.skin


[*] --> pending
pending --> waiting_to_start
waiting_to_start --> starting
pending --> starting
starting --> running
starting --> failed
starting --> succeeded
running --> succeeded
running --> failed
running --> stopping
stopping --> removed
failed --> removed
failed -left-> pending
succeeded --> removed
succeeded --> pending
running --> waiting_to_stop
waiting_to_stop -right-> stopping
unknown --> removed
note top of unknown
    A transition to unknown
    is possible from all states,
    but is now shown here for
    better readability.
end note
removed --> [*]
@enduml
